syntax = "proto3";

option go_package = "nem/idl/gen";
option java_multiple_files = true;
option java_package = "github.com/nuzur/nem";
option java_outer_classname = "FieldTypeDateConfig";

package nem;



message FieldTypeDateConfig {  
    bool enforce_future = 1;
    bool enforce_past = 2;
    string display_timezone = 3;
    string storage_timezone = 4;    
}
